--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -2,6 +2,15 @@
   padding: 0 2rem;
 }
 
+.parent {
+  box-sizing: border-box;
+  width: 70rem;
+  margin: auto;
+  display: flex;
+  flex-wrap: wrap;
+  transition: all 0.2 linear;
+}
+
 .main {
   min-height: 100vh;
   padding: 4rem 0;
