--- a/styles/globals.css
+++ b/styles/globals.css
@@ -22,7 +22,7 @@ a {
   box-sizing: border-box;
 }
 
-::-webkit-scrollbar-track {
+/* ::-webkit-scrollbar-track {
   background: #161616;
 }
 ::-webkit-scrollbar-thumb {
@@ -31,6 +31,10 @@ a {
 }
 ::-webkit-scrollbar {
   width: 5px;
+} */
+
+::-webkit-scrollbar {
+  display: none;
 }
 
 @media (prefers-color-scheme: dark) {
